completed header in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
     <!-- HEADER: logo + titolo -->
     <header>
-
+        <img src="./img/Logo.png" class ="logo" alt="Logo Boolean">
+        <span class="titolo-header">Toboolist</span>
     </header>
 
     <!-- MAIN: bottoni + lista -->
