completed "box bottoni" in index.html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
     <!-- MAIN: bottoni + lista -->
     <main>
 
+        <!-- box bottone blu + bottone bianco  -->
+        <div class="container">
+            <div class="box-bottoni">
+                <input type="button" value="Add Task" class="bottone-blu">
+                <input type="button" value="Add Section" class="bottone-bianco">
+            </div>
+        </div>
+
     </main>
 
 </body>
