added "mainlist" to index.html (da rivedere)

--- a/index.html
+++ b/index.html
@@ -21,11 +21,27 @@
     <!-- MAIN: bottoni + lista -->
     <main>
 
-        <!-- box bottone blu + bottone bianco  -->
         <div class="container">
+
+            <!-- box bottone blu + bottone bianco  -->
             <div class="box-bottoni">
                 <input type="button" value="Add Task" class="bottone-blu">
                 <input type="button" value="Add Section" class="bottone-bianco">
+            </div>
+
+            <!-- box lista  -->
+            <div class="box-lista">
+                <ul class="mainlist">
+                    <li>
+                        &#9660; New Task
+                    </li>
+                    <li>
+                        &#9660; Today
+                    </li>
+                    <li>
+                        &#9660; Upcoming
+                    </li>
+                </ul>
             </div>
         </div>
 
