--- a/index.html
+++ b/index.html
@@ -34,12 +34,51 @@
                 <ul class="mainlist">
                     <li>
                         &#9660; New Task
+                        <div class="box-singlelist">
+                            <ul class="singlelist">
+                                <li>
+                                   <span class="check">&check;</span> Quarterly Newsletter
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                     <li>
                         &#9660; Today
+                        <div class="box-singlelist">
+                            <ul class="singlelist">
+                                <li>
+                                   <span class="check">&check;</span> Recruiting blog post
+                                </li>
+                                <li>
+                                    <span class="check">&check;</span> Mobile app launch
+                                 </li>
+                                 <li>
+                                    <span class="n-check">&cross;</span> Interview John H.
+                                 </li>
+                                 <li>
+                                    <span class="check">&check;</span> Summit update to mobile storefronts
+                                 </li>
+                            </ul>
+                        </div>
                     </li>
                     <li>
                         &#9660; Upcoming
+                        <div class="box-singlelist">
+                            <ul class="singlelist">
+                                <li>
+                                   <span class="n-check">&cross;</span> Schedule meeting with Alex
+                                </li>
+                                <li>
+                                    <span class="check">&check;</span> Homepage refresh
+                                 </li>
+                                 <li>
+                                    <span class="check">&check;</span> Onboard new Sales team members
+                                 </li>
+                                 <li>
+                                    <span class="check">&check;</span> Review editorial calendar
+                                 </li>
+                            </ul>
+                        </div>
                     </li>
                 </ul>
             </div>
