--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <div class="box-singlelist">
                             <ul class="singlelist">
                                 <li>
-                                   <span class="check">&check;</span> Quarterly Newsletter
+                                   <span class="check">&check;</span> Quarterly Newsletter <span class="tag blue">Editorial</span>
                                 </li>
                             </ul>
                         </div>
@@ -47,16 +47,16 @@
                         <div class="box-singlelist">
                             <ul class="singlelist">
                                 <li>
-                                   <span class="check">&check;</span> Recruiting blog post
+                                   <span class="check">&check;</span> Recruiting blog post <span class="tag blue">Editorial</span>
                                 </li>
                                 <li>
-                                    <span class="check">&check;</span> Mobile app launch
+                                    <span class="check">&check;</span> Mobile app launch <span class="tag purple">Q1 Goals</span>
                                  </li>
                                  <li>
-                                    <span class="n-check">&cross;</span> Interview John H.
+                                    <span class="n-check">&cross;</span> Interview John H. <span class="tag green">Recruiting</span>
                                  </li>
                                  <li>
-                                    <span class="check">&check;</span> Summit update to mobile storefronts
+                                    <span class="check">&check;</span> Summit update to mobile storefronts <span class="tag orange">Mobile</span>
                                  </li>
                             </ul>
                         </div>
@@ -69,13 +69,13 @@
                                    <span class="n-check">&cross;</span> Schedule meeting with Alex
                                 </li>
                                 <li>
-                                    <span class="check">&check;</span> Homepage refresh
+                                    <span class="check">&check;</span> Homepage refresh <span class="tag pink">Website</span>
                                  </li>
                                  <li>
-                                    <span class="check">&check;</span> Onboard new Sales team members
+                                    <span class="check">&check;</span> Onboard new Sales team members <span class="tag lime">Sales</span>
                                  </li>
                                  <li>
-                                    <span class="check">&check;</span> Review editorial calendar
+                                    <span class="check">&check;</span> Review editorial calendar <span class="tag blue">Editorial</span>
                                  </li>
                             </ul>
                         </div>
